isAuthUsage
